# ollama-tk

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: black-lint.yml  pyright-lint.yml  pytest.yml  python-publish.yml
src/ollamatk/: __init__.py  __main__.py  about.py  app.py  chat.py  event_thread.py  http.py  installable.py  logging.py  messages.py  scrollable_frame.py  settings.py  styling.py  wrap_label.py
tests/: conftest.py  test_event_thread.py  test_installable.py  test_logging.py
