[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-tk"
description = "A tkinter GUI for interacting with any Ollama API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]
dependencies = ["httpx>=0.27.2"]

[project.gui-scripts]
ollamatk = "ollamatk.__main__:main"

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/ollama-tk"
"Issue Tracker" = "https://github.com/thegamecracks/ollama-tk/issues"
