[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-tk"
description = "A tkinter GUI for interacting with any Ollama API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["httpx>=0.27.2"]

[project.gui-scripts]
ollamatk = "ollamatk.__main__:main"
ollama-tk = "ollamatk.__main__:main"

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/ollama-tk"
"Issue Tracker" = "https://github.com/thegamecracks/ollama-tk/issues"
